--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:import/recommended"
+  ],
+  "rules": {
+    "import/no-anonymous-default-export": "off",
+    "react/no-unescaped-entities": "off"
+  }
 }
